data/derived/fa15/progs/unify/prog1332.ml.out
Characters 33-47:
  let stringOfList f l = sepConcat (List.map f l) [""];;
                                   ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
